# tungsten

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: README.md  array.md  arrays.md  builtin_types.md  constants.md  documentation.md  enums.md  functions.md  generics.md  including.md  literals.md  memory.md  modifiers.md  namespaces.md  operators.md  overloading.md  references.md  struct.md  structs.md
examples/: hello_world.tg
examples/hello_world/: main.tg  project.txt
smelt/: CMakeLists.txt  README.md
smelt/include/: code.h  config.h  errors.h  lexer.h  parser.h  parser_position.h  project.h  settings.h  shared.h  token_type.h
smelt/include/ast/: binary_expr.h  block_expr.h  call_expr.h  call_node.h  function_node.h  iexpr.h  inode.h  int_literal_expr.h  integer_node.h  literal_expr.h  literal_node.h  namespace_node.h  prototype_node.h  return_expr.h  string_literal_expr.h  struct_node.h  type.h  variable_expr.h  variable_node.h
smelt/src/: code.cpp  config.cpp  lexer.cpp  main.cpp  parser.cpp  parser_position.cpp  project.cpp
smelt/src/ast/: binary_expr.cpp  block_expr.cpp  call_expr.cpp  call_node.cpp  function_node.cpp  iexpr.cpp  int_literal_expr.cpp  integer_node.cpp  literal_expr.cpp  literal_node.cpp  namespace_node.cpp  prototype_node.cpp  return_expr.cpp  string_literal_expr.cpp  struct_node.cpp  type.cpp  variable_expr.cpp
